# drawio_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PostConfig.js  README.md  design.md
data/: test.drawio  test3.drawio
src/: git_versioning.rs  main.rs
static/: drawio.html  index.html  token.html
