[package]
name = "drawioserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
thiserror = "1"
axum-extra = { version = "0.9", features = ["cookie"] }
percent-encoding = "2"
time = "0.3"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
git2 = "0.18"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
file-watcher = ["dep:notify"]

[dependencies.notify]
version = "6"
optional = true

